styles.css
    body {
        display: flex;
        height: 100vh;
    }

    .left-bar {
        background-image: url("img/cs2.jpeg");
        background-size: cover;
        background-repeat: no-repeat;
        background-color: rgb(255, 255, 255, 0.5);
        flex: 1;
        height: 100%;
        display: flex;
        flex-direction: column;
        justify-content: flex-end;
        align-items: center;
        position: relative;
    }

    .header {
        position: absolute;
        top: 380px;
        display: flex;
        height: 80px;
        width: auto;
        background-color: lightgrey;;
        width: 100%;
        justify-content: center;
    }

    .right-bar {
        flex: 2;
        height: 100%;
        background-color: #f4f5f5;
        padding: 200px 0px;
    }   

    .footer {
        background-color: cyan;
    }

    img[src="img/cs2logo.jpg"] {
        margin-right: 10px;
    }

    .right-heading {
        margin: 0 50px;
    }

    h3 {
        font-size: 30px;
    }

    h4 {
        font-size: 28px;
    }

    .form {
        width: auto;
        height: 300px;
        background-color: white;
        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
        padding: 30px 50px;
    }

    fieldset {
        display: flex;
        justify-content: flex-start;
        border: none;
        margin: 20px 0;
        padding: 0;
    }

    .form-cell {
        margin-right: 100px;
        display: flex;
        flex-direction: column;
        color: #3899a1; 
        font-weight: 600;
    }

    input {
        border: 2px solid grey;
        width: 300px;
        height: 25px;
        border-radius: 10px;
    }

    input:invalid {
        border: 1px solid red;
    }

    input:valid {
        border: 1px solid green;
    }

    input:focus {
        outline: 1px solid blue;
    }

    input:focus:invalid {
        outline: 2px solid grey;
    }

    #pw-error {
        color: red;
        font-weight: 400;
        display: none;
    }

    .right-footer {
        margin: 100px 0;
    }

    button[type="submit"] {
        background-color: darkgreen;
        color: white;
        border: none;
        border-radius: 10px;
        font-size: 15px;
        padding: 30px;
        font-weight: 950;
    }

    button[type="submit"]:hover {
        background-color: #008000;
    }

    .right-footer a {
        color: darkgreen;
    }

    .right-footer p{
        font-size: 17px;
    }

